# easy-loader

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
src/easy_loader/: __init__.py  __main__.py  bootstrap.py  theme.py  window.py  worker.py
