[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "easy-loader"
version = "1.0.0"
description = "Minimal desktop app for downloading YouTube videos, audio and thumbnails"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "komendant-zero" },
]

dependencies = [
    "yt-dlp>=2024",
    "PySide6>=6.6",
    "certifi",
    "requests",
    "urllib3",
    "brotli",
    "mutagen",
    "pycryptodomex",
]

[project.urls]
Repository = "https://github.com/komendant-zero/easy-loader"

[tool.setuptools.packages.find]
where = ["src"]